--- a/码上爬.md
+++ b/码上爬.md
@@ -339,7 +339,7 @@ for page in range(1,21):
 print(sum(list))
 ```
 ## 千山鸟飞绝
-#### 经过观察为简单的请求头加密分别为m和ts，并且对响应内容response进行加密。通过分析loadPage里面的源代码很容易就可以进行js还原，但是要注意在还原加密参数时不要再js里面用json还原最终结果
+#### 经过观察为简单的请求头加密分别为m和ts，并且对响应内容response进行加密。通过分析loadPage里面的源代码很容易就可以进行js还原，但是要注意在还原加密参数时不要再js里面用json还原最终结果。加密eeee方法解密是xxxxoooo方法
 ```js
 // 前半部分借鉴的阿尔法老师的 后半部分自己写的 因为再https://obf-io.deobfuscate.io/上面前部分解混淆是错误的。
 const CryptoJS = require('crypto-js')
