--- a/码上爬.md
+++ b/码上爬.md
@@ -1108,36 +1108,6 @@ print(sum(list))
 ## 13.风火轮
 #### 本题目为请求头的加密方式r,m加密与ts，观察调用的loadPage发现找不到，看旁边侧边栏的js文件发现有base文件但是点击发现没事用，点击jqueryxhr.js，发现为ob混淆，解混淆观察js代码 最后发现加密位置，于是开始扣js代码 _0x3565b7没啥用就是对请求头替换用的可以直接删掉。
 ```js
-setInterval(() => {
-  (function (_0xcd5855) {
-    return function (_0x548021) {
-      return Function("Function(arguments[0]+\"" + _0x548021 + "\")()");
-    }(_0xcd5855);
-  })("bugger")("de", 0, 0, (0, 0));
-}, 1000);
-const originalJSON = {
-  "stringify": JSON["stringify"],
-  "parse": JSON["parse"]
-},
-      x1 = new Proxy(originalJSON, {
-  "get"(_0x1d3ede, _0xcace7f) {
-    if (_0xcace7f === "stringify") {
-      return function (..._0x1fdf05) {
-        return _0x1d3ede["stringify"](..._0x1fdf05);
-      };
-    } else {
-      if (_0xcace7f === "parse") {
-        return function (..._0x45d409) {
-          return _0x1d3ede["parse"](..._0x45d409);
-        };
-      }
-    }
-
-    return _0x1d3ede[_0xcace7f];
-  }
-
-});
-
 var mmm = function (_0x3d02a0) {
   function _0x1dbdb9(_0x2a6028) {
     if (_0x375c2e[_0x2a6028]) {
@@ -1443,53 +1413,7 @@ var mmm = function (_0x3d02a0) {
 }, function (_0x28a94d, _0x24d55d, _0x2037bf) {
   _0x28a94d["exports"] = _0x2037bf(1);
 }]);
-
-(function (_0x48d404, _0x1e61ca) {
-  if (typeof exports === "object" && typeof module !== "undefined") {
-    module["exports"] = _0x1e61ca();
-  } else {
-    typeof define === "function" && define["amd"] ? define(_0x1e61ca) : _0x48d404["API"] = _0x1e61ca();
-  }
-})(this, function () {
-  function _0x1e5c29() {
-    var _0xee3b28 = [];
-    var _0x454710 = "0123456789abcdef";
-
-    for (var _0x20183e = 0; _0x20183e < 32; _0x20183e++) {
-      _0xee3b28[_0x20183e] = _0x454710["substr"](Math["floor"](Math["random"]() * 16), 1);
-    }
-
-    _0xee3b28[14] = "4";
-    _0xee3b28[19] = _0x454710["substr"](_0xee3b28[19] & 3 | 8, 1);
-    _0xee3b28[8] = _0xee3b28[13] = _0xee3b28[18] = _0xee3b28[23];
-
-    var _0x4b1861 = _0xee3b28["join"]('');
-
-    return _0x4b1861;
-  }
-
-  function _0x321804(_0x16e6dd) {
-    var _0xe41c9a = new Array();
-
-    var _0x5c0de1 = 0;
-
-    for (var _0x710b23 in _0x16e6dd) {
-      _0xe41c9a[_0x5c0de1] = _0x710b23;
-      _0x5c0de1++;
-    }
-
-    var _0x5cb7f4 = _0xe41c9a["sort"]();
-
-    var _0xef2cfa = {};
-
-    for (var _0x710b23 in _0x5cb7f4) {
-      _0xef2cfa[_0x5cb7f4[_0x710b23]] = _0x16e6dd[_0x5cb7f4[_0x710b23]];
-    }
-
-    return _0xef2cfa;
-  }
-
-  function _0x10b283(_0x509319) {
+function _0x10b283(_0x509319) {
     var _0xacbd09 = [],
         _0x38ad9e = {};
     _0xacbd09 = _0x509319["split"]("&");
@@ -1510,31 +1434,113 @@ var mmm = function (_0x3d02a0) {
 
     return _0x38ad9e;
   }
+function _0x321804(_0x16e6dd) {
+    var _0xe41c9a = new Array();
 
-  var _0x3a4216 = $["ajaxSettings"]["beforeSend"];
+    var _0x5c0de1 = 0;
 
-  $["ajaxSettings"]["beforeSend"] = function (_0x3565b7, _0x891154) {
-    var _0x2059bf = Date["parse"](new Date());
-
-    var _0x350b3a = _0x1e5c29();
-
-    var _0x3f9dab = x1["stringify"](_0x321804(_0x10b283(_0x891154["data"] || "{}")));
-
-    var _0x3104de = mmm(_0x3f9dab + _0x350b3a + _0x2059bf);
-
-    _0x891154["data"] = _0x3f9dab;
-
-    _0x3565b7["setRequestHeader"]("t", _0x2059bf);
-
-    _0x3565b7["setRequestHeader"]("r", _0x350b3a);
-
-    _0x3565b7["setRequestHeader"]("s", _0x3104de);
-
-    if (_0x3a4216) {
-      return _0x3a4216(jqXHR, _0x891154);
+    for (var _0x710b23 in _0x16e6dd) {
+      _0xe41c9a[_0x5c0de1] = _0x710b23;
+      _0x5c0de1++;
     }
-  };
+
+    var _0x5cb7f4 = _0xe41c9a["sort"]();
+
+    var _0xef2cfa = {};
+
+    for (var _0x710b23 in _0x5cb7f4) {
+      _0xef2cfa[_0x5cb7f4[_0x710b23]] = _0x16e6dd[_0x5cb7f4[_0x710b23]];
+    }
+
+    return _0xef2cfa;
+  }
+ const originalJSON = {
+  "stringify": JSON["stringify"],
+  "parse": JSON["parse"]
+},
+      x1 = new Proxy(originalJSON, {
+  "get"(_0x1d3ede, _0xcace7f) {
+    if (_0xcace7f === "stringify") {
+      return function (..._0x1fdf05) {
+        return _0x1d3ede["stringify"](..._0x1fdf05);
+      };
+    } else {
+      if (_0xcace7f === "parse") {
+        return function (..._0x45d409) {
+          return _0x1d3ede["parse"](..._0x45d409);
+        };
+      }
+    }
+
+    return _0x1d3ede[_0xcace7f];
+  }
+
 });
+ function _0x1e5c29() {
+    var _0xee3b28 = [];
+    var _0x454710 = "0123456789abcdef";
+
+    for (var _0x20183e = 0; _0x20183e < 32; _0x20183e++) {
+      _0xee3b28[_0x20183e] = _0x454710["substr"](Math["floor"](Math["random"]() * 16), 1);
+    }
+
+    _0xee3b28[14] = "4";
+    _0xee3b28[19] = _0x454710["substr"](_0xee3b28[19] & 3 | 8, 1);
+    _0xee3b28[8] = _0xee3b28[13] = _0xee3b28[18] = _0xee3b28[23];
+
+    var _0x4b1861 = _0xee3b28["join"]('');
+
+    return _0x4b1861;
+  }
+function _0x3565b7 (e, t) {
+  "object" == typeof e && (t = e, e = void 0), t = t || {};
+  var c, f, p, n, d, r, h, g, i, o, v = S.ajaxSetup({}, t), y = v.context || v,
+      m = v.context && (y.nodeType || y.jquery) ? S(y) : S.event, x = S.Deferred(),
+      b = S.Callbacks("once memory"), w = v.statusCode || {}, a = {}, s = {}, u = "canceled", T = {
+        readyState: 0, getResponseHeader: function (e) {
+          var t;
+          if (h) {
+            if (!n) {
+              n = {};
+              while (t = qt.exec(p)) n[t[1].toLowerCase() + " "] = (n[t[1].toLowerCase() + " "] || []).concat(t[2])
+            }
+            t = n[e.toLowerCase() + " "]
+          }
+          return null == t ? null : t.join(", ")
+        }, getAllResponseHeaders: function () {
+          return h ? p : null
+        }, setRequestHeader: function (e, t) {
+          return null == h && (e = s[e.toLowerCase()] = s[e.toLowerCase()] || e, a[e] = t), this
+        }, overrideMimeType: function (e) {
+          return null == h && (v.mimeType = e), this
+        }, statusCode: function (e) {
+          var t;
+          if (e) if (h) T.always(e[T.status]); else for (t in e) w[t] = [w[t], e[t]];
+          return this
+        }, abort: function (e) {
+          var t = e || u;
+          return c && c.abort(t), l(0, t), this
+        }
+      };
+}
+function sakura (p) {
+    let page = 'page='+ p.toString()
+    console.log(page)
+    var _0x350b3a = _0x1e5c29();
+    var t = Date["parse"](new Date());
+    var _0x350b3a = _0x1e5c29();
+    var r = x1["stringify"](_0x321804(_0x10b283(page))).toString();
+    console.log(r)
+    var s = mmm(r + _0x350b3a +t);
+    console.log(_0x350b3a)
+    let result={
+      't' : t.toString(),
+      'r' :_0x350b3a,
+      's' : s
+  }
+  return  result
+  };
+// sakura(3)
 ```
 ```python
 import execjs
