使图片更加的美观

--- a/差异基因分析.md
+++ b/差异基因分析.md
@@ -303,7 +303,8 @@ go_result <- enrichGO(
 # GO富集分析气泡图
 go_dot_plot <- dotplot(go_result, showCategory = 15, split = "ONTOLOGY") + 
   facet_grid(ONTOLOGY~., scale="free") +
-  ggtitle("GO 富集分析气泡图")
+  ggtitle("GO 富集分析气泡图")+
+theme(plot.title = element_text(hjust = 0.5))
 print(go_dot_plot)
 
 # 保存GO气泡图
@@ -311,7 +312,7 @@ ggsave(
   "go_enrichment_dotplot.tiff",
   plot = go_dot_plot,
   width = 10,
-  height = 8,
+  height = 15,
   dpi = 300,
   device = "tiff" 
 )
@@ -328,7 +329,8 @@ kegg_result <- enrichKEGG(
 # 可视化KEGG富集分析结果
 print("正在绘制KEGG富集分析条形图...")
 kegg_barplot <- barplot(kegg_result, showCategory = 20) + 
-  ggtitle("KEGG 通路富集分析")
+  ggtitle("KEGG 通路富集分析")+
+theme(plot.title = element_text(hjust = 0.5))
 print(kegg_barplot)
 
 # 保存KEGG条形图
@@ -336,12 +338,13 @@ ggsave(
   "kegg_enrichment_barplot.tiff",
   plot = kegg_barplot, 
   width = 10, 
-  height = 8, 
+  height = 10, 
   dpi = 300,
   device = "tiff" 
 )
-```r
+```
 ### 八、GSEA (基因集富集分析)
+```r
 print("正在准备 GSEA 分析...")
 # 准备GSEA的输入数据,GSEA需要一个按logFC降序排列的、以【Entrez ID】为名字的向量，(top_genes 必须是 topTable(fit2, number = Inf) 的完整结果)
 
@@ -379,7 +382,8 @@ gsea_kegg <- gseKEGG(
 
 # 绘制GSEA 气泡图
 gsea_dot_plot <- dotplot(gsea_kegg, showCategory = 15) + 
-  ggtitle("GSEA-KEGG 气泡图")
+  ggtitle("GSEA-KEGG 气泡图")+
+theme(plot.title = element_text(hjust = 0.5))
 print(gsea_dot_plot)
 
 # GSEA 经典富集图 (以第一个富集通路为例)
@@ -394,7 +398,7 @@ print(gsea_enrich_plot)
 ggsave("gsea_kegg_dotplot.tiff", plot = gsea_dot_plot, width = 10, height = 8, dpi = 300, device = "tiff")
 ggsave("gsea_kegg_enrichplot.tiff", plot = gsea_enrich_plot, width = 8, height = 6, dpi = 300, device = "tiff")
 ```
-### 八、GSVA (基因集变异分析)
+### 九、GSVA (基因集变异分析)
 ```r
 library(GSVA)
 library(msigdbr) # 用于从MSigDB数据库获取权威的基因集，但是由于该数据库的服务器在国外，本次即使科学上网也无法通过Rstudio链接上只能本地下载读取了。
@@ -471,7 +475,7 @@ pheatmap(
   show_rownames = TRUE,
   cluster_cols = TRUE,
   annotation_col = annotation_col,
-  main = "GSVA 显著差异通路热图 (来自本地GMT)"
+  main = "GSVA 显著差异通路热图"
 )
 # 关闭并保存
 dev.off()
