--- a/差异基因分析.md
+++ b/差异基因分析.md
@@ -6,10 +6,10 @@
   - [三、PCA（主成分分析）](#三-pca主成分分析)
   - [四、将基因ID进行相应的转换 (将Ensembl ID转换为基因符号)](#四-将基因id进行相应的转换-将ensembl-id转换为基因符号)
   - [五、使用 limma 进行差异表达分析](#五-使用-limma-进行差异表达分析)
-  - [六、结果可视化（火山图，热图）](#六-结果可视化（火山图，热图）)
-  - [七、GO与KEGG分析](#七-GO与KEGG分析)
-  - [八、GSEA (基因集富集分析)](#八-GSEA (基因集富集分析))
-  - [九、GSVA (基因集变异分析)](#九-GSVA (基因集变异分析))
+  - [六、结果可视化（火山图，热图）](#六-结果可视化-火山图-热图)
+  - [七、GO与KEGG分析](#七-go与kegg分析)
+  - [八、GSEA (基因集富集分析)](#八-gsea-基因集富集分析)
+  - [九、GSVA (基因集变异分析)](#九-gsva-基因集变异分析)
 ## 一、数据准备
 ### 基于此进行第一次列名映射 column文件
 ```txt
