--- a/差异基因分析.md
+++ b/差异基因分析.md
@@ -182,7 +182,7 @@ gene_symbols <- mapIds(org.Hs.eg.db,
 # 将基因符号信息添加到我们的voom对象中，方便后续调用
 v$genes <- data.frame(symbol = gene_symbols)
 ```
-## 五、使用 limma 进行差异表达分析
+## 五-使用-limma-进行差异表达分析
 ```r
 # 对每个基因拟合线性模型
 fit <- lmFit(v, design)
