--- a/差异基因分析.md
+++ b/差异基因分析.md
@@ -10,7 +10,7 @@
   - [七、GO与KEGG分析](#七-go与kegg分析)
   - [八、GSEA (基因集富集分析)](#八-gsea-基因集富集分析)
   - [九、GSVA (基因集变异分析)](#九-gsva-基因集变异分析)
-## 一、数据准备
+## 一-数据准备
 ### 基于此进行第一次列名映射 column文件
 ```txt
 old	new
@@ -51,7 +51,7 @@ GSM8266840	treat
 GSM8266838	treat
 GSM8266836	treat
 ```
-### 二、数据处理
+### 二-数据处理
 ```r
 # 设置相应的文件目录
 setwd('D:\\r\\class\\GSE267442')
@@ -106,7 +106,7 @@ expr_data_normalized <- v$E
 dim(expr_data_normalized)
 head(expr_data_normalized, n=3)
 ```
-## 三、PCA（主成分分析）
+## 三-pca主成分分析
 ```r
 # 加载画图包 (如果前面已加载，可省略)
 library(ggplot2)
@@ -167,7 +167,7 @@ ggsave(
 )
 print("PCA分析图片已保存为 pca_plot_with_ellipses.tiff")
 ```
-## 四、将基因ID进行相应的转换 (将Ensembl ID转换为基因符号)
+## 四-将基因id进行相应的转换-将ensembl-id转换为基因符号
 ```r
 # 加载人类基因注释数据库
 library(org.Hs.eg.db)
@@ -199,7 +199,7 @@ top_genes <- topTable(fit2, adjust.method = "fdr", number = Inf)
 print("差异分析结果预览:")
 head(top_genes,n=3)
 ```
-## 六、结果可视化（火山图，热图）
+## 六-结果可视化-火山图-热图
 ```r
 # 加载画图所需的包
 library(ggplot2)
@@ -276,7 +276,7 @@ pheatmap(sig_expr_data,
 # 关闭文件设备，完成图片保存
 dev.off()
 ```
-## 七、GO与KEGG分析
+## 七-go与kegg分析
 ```r
 # 导包
 library(clusterProfiler)
@@ -350,7 +350,7 @@ ggsave(
   device = "tiff" 
 )
 ```
-## 八、GSEA (基因集富集分析)
+## 八-gsea-基因集富集分析
 ```r
 print("正在准备 GSEA 分析...")
 # 准备GSEA的输入数据,GSEA需要一个按logFC降序排列的、以【Entrez ID】为名字的向量，(top_genes 必须是 topTable(fit2, number = Inf) 的完整结果)
@@ -405,7 +405,7 @@ print(gsea_enrich_plot)
 ggsave("gsea_kegg_dotplot.tiff", plot = gsea_dot_plot, width = 10, height = 8, dpi = 300, device = "tiff")
 ggsave("gsea_kegg_enrichplot.tiff", plot = gsea_enrich_plot, width = 8, height = 6, dpi = 300, device = "tiff")
 ```
-## 九、GSVA (基因集变异分析)
+## 九-gsva-基因集变异分析
 ```r
 library(GSVA)
 library(msigdbr) # 用于从MSigDB数据库获取权威的基因集，但是由于该数据库的服务器在国外，本次即使科学上网也无法通过Rstudio链接上只能本地下载读取了。
